--- a/menu_example/menu_example.routing.yml
+++ b/menu_example/menu_example.routing.yml
@@ -3,6 +3,7 @@ examples.menu_example:
   defaults:
     _content: '\Drupal\menu_example\Controller\MenuExampleController::basicInstructions'
     _title: 'Menu Example'
+    content: 'This page is displayed by the simplest (and base) menu example. Note that the title of the page is the same as the link title. You can also <a href="!link">visit a similar page with no menu link</a>. Also, note that there is a hook_menu_alter() example that has changed the path of one of the menu items.'
   requirements:
     _permission: 'access content'
     
@@ -35,6 +36,7 @@ examples.menu_example.custom_access:
   path: '/examples/menu_example/custom_access'
   defaults:
     _content: '\Drupal\menu_example\Controller\MenuExampleController::customAccess'
+    _title: 'Custom Access Example'
   requirements:
     _permission: 'access content'
     
@@ -42,6 +44,7 @@ examples.menu_example.custom_access_page:
   path: '/examples/menu_example/custom_access/page'
   defaults:
     _content: '\Drupal\menu_example\Controller\MenuExampleController::customAccessPage'
+    _title: 'Custom Access Menu Item'
   requirements:
     _user_is_logged_in: 'TRUE'
 
@@ -62,10 +65,11 @@ examples.menu_example.route_only.route:
     _access: 'TRUE'
 
 examples.menu_example.tabs:
-  path: '/examples/menu_example/tabs'
+  path: '/examples/menu_example/tabs/{test}'
   defaults:
     _content: '\Drupal\menu_example\Controller\MenuExampleController::menuPage'
     _title: 'Tabs'
+    test: <b>wut wut?</b>
   requirements:
     _access: 'TRUE'
 
@@ -110,10 +114,12 @@ examples.menu_example.tabs.secondary_third:
     _access: 'TRUE'
 
 examples.menu_example.use_url_arguments:
-  path: '/examples/menu_example/use_url_arguments'
+  path: '/examples/menu_example/use_url_arguments/{arg1}/{arg2}'
   defaults:
-    _content: 
+    _content: '\Drupal\menu_example\Controller\MenuExampleController::urlArgs'
     _title: 'Extra Arguments'
+    arg1: ''
+    arg2: ''
   requirements:
     _access: 'TRUE'
 
