--- a/menu_example/menu_example.services.yml
+++ b/menu_example/menu_example.services.yml
@@ -7,3 +7,7 @@ services:
     class: Drupal\menu_example\Routing\RouteSubscriber
     tags:
       - { name: event_subscriber }
+  paramconverter.menu_example:
+    class: Drupal\menu_example\ParamConverter\MenuExampleConverter
+    tags:
+      - { name: paramconverter }
